Cambiadas muchas cosas para el parche 1.8, mirar patch.html

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -26,15 +26,16 @@
                         <li>Ahora en la subasta no pueden aparecer <span class="label label-extra">Hechizos</span> de nivel 4 o 5.</li>
                         <li>Se han reorganizado todos los <span class="label label-extra">Hechizos</span> para que los más únicos de cada color estén en los niveles superiores.</li>
                         <li>Se han reasignado muchas <span class="label label-extra">Habilidades</span> de <span class="label label-extra">Tropas</span>.</li>
-                        <li>Se han cambiado los items vendidos en la tienda interna del juego.</li>
+                        <li>Se han cambiado los <span class="label label-extra">Artefactos</span> vendidos en la tienda interna del juego.</li>
                         <li>Se han modificado/añadido los siguientes <span class="label label-artifact">Artefactos</span>:
                             <ul>
-                                <li><span class="label label-artifact">Reloj de Arena</span>, aumentado de 75 a 150 los turnos restados a tus encantamientos.</li>
-                                <li><span class="label label-artifact">Barril de Pólvora</span>, aumentado de 3% a 6% los edificios enemigos destruidos.</li>
-                                <li><span class="label label-artifact">Cabeza de Medusa</span>, aumentado de 3 hasta 5 los niveles enemigos eliminados.</li>
-                                <li><span class="label label-artifact">Espejo Roto</span>, rompe un encantamiento enemigo aleatorio.</li>
-                                <li><span class="label label-artifact">Polvo de Hadas</span>, roba tropas enemigas y las agrega a tu Reino.</li>
-                                <li><span class="label label-artifact">Santa Granada</span>, destruye tropas enemigas.</li>
+                                <li><span class="label label-artifact">Reloj de Arena</span>, aumentado de 75 a 150 los turnos restados a tus <span class="label label-extra">Encantamientos</span>.</li>
+                                <li><span class="label label-artifact">Barril de Pólvora</span>, aumentado de 3% a 6% los <span class="label label-extra">Edificios</span> enemigos destruidos.</li>
+                                <li><span class="label label-artifact">Espejo Roto</span>, rompe un <span class="label label-extra">Encantamiento</span> enemigo aleatorio.</li>
+                                <li><span class="label label-artifact">Polvo de Hadas</span>, roba <span class="label label-extra">Tropas</span> enemigas y las agrega a tu Reino.</li>
+                                <li><span class="label label-artifact">Santa Granada</span>, destruye <span class="label label-extra">Tropas</span> enemigas.</li>
+                                <li><span class="label label-artifact">Libro Prohibido</span>, obtiene un nuevo <span class="label label-extra">Hechizo</span> para investigar.</li>
+                                <li><span class="label label-artifact">Recetario de Pociones</span>, obtiene una <span class="label label-recipe">Receta de Alquimia</span>.</li>
                                 <li><span class="label label-legendary">Amuleto Guerrero</span>, +50 de <span class="label label-extra">Experiencia</span> a tus <span class="label label-extra">Héroes</span> tras un combate.</li>
                                 <li><span class="label label-legendary">Amuleto Erudito</span>, +20% de bonus de <span class="label label-extra">Investigación</span>.</li>
                                 <li><span class="label label-legendary">Amuleto Exótico</span>, +1 <span class="label label-extra">Tierra</span> al <i class="fa fa-fw fa-hourglass-half"></i>.</li>
@@ -44,16 +45,16 @@
                         </li>
                         <li>Se han modificado los siguientes <span class="label label-extra">Héroes</span>:
                             <ul>
-                                <li><span class="label label-success">Ladrona Elfa</span>, aumentado de 1 a 3 los turnos eliminados por nivel.</li>
+                                <li><span class="label label-success">Ladrona Elfa</span>, aumentado de 1 a 2 los <span class="label label-extra">Turnos</span> eliminados por nivel.</li>
                             </ul>
                         </li>
                         <li>Se han modificado los siguientes <span class="label label-extra">Hechizos</span>:
                         <ul>
-                            <li><span class="label label-warning">Eclipse</span>, encantamiento que reduce el poder de tu Reino para que sea más dificil atacarte.</li>
-                            <li><span class="label label-danger">Infierno</span>, como <span class="label label-danger">Bola de Fuego</span> pero tiene como objetivo a todas las tropas enemigas.</li>
-                                <li><span class="label label-info">Tsunami</span> por <span class="label label-info">Hipnosis</span>, roba tropas enemigas y las agrega a tu ejército.</li>
-                                <li><span class="label label-primary">Palabra Santa</span> por <span class="label label-primary">Condena</span>, encantamiento que hace perder turnos al enemigo.</li>
-                                <li><span class="label label-success">Rayo de Sol</span> por <span class="label label-success">Marca del Cazador</span>, encantamiento para que el mago enemigo pueda ser atacado por cualquiera.</li>
+                            <li><span class="label label-warning">Eclipse</span>, <span class="label label-extra">Encantamiento</span> que reduce el <span class="label label-extra">Poder</span> de tu Reino para que sea más dificil atacarte.</li>
+                            <li><span class="label label-danger">Infierno</span>, como <span class="label label-danger">Bola de Fuego</span> pero tiene como objetivo a todas las <span class="label label-extra">Tropas</span> enemigas.</li>
+                                <li><span class="label label-info">Tsunami</span> por <span class="label label-info">Hipnosis</span>, roba <span class="label label-extra">Tropas</span> enemigas y las agrega a tu ejército.</li>
+                                <li><span class="label label-primary">Palabra Santa</span> por <span class="label label-primary">Iluminación</span>, obtiene nuevos <span class="label label-extra">Hechizos</span> para investigar.</li>
+                                <li><span class="label label-success">Rayo de Sol</span> por <span class="label label-success">Marca del Cazador</span>, <span class="label label-extra">Encantamiento</span> para que el mago enemigo pueda ser atacado por cualquiera.</li>
                             </ul>
                         </li>
                     </ul>
