--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -20,7 +20,7 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/magic.png') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y <span class="label label-extra">Maná</span> en conjurar un <span class="label label-extra">Hechizo</span> sobre tu Reino o un enemigo. Al igual que con los Artefactos, debes traspasar la <span class="label label-extra">Defensa Mágica</span> del objetivo. Colocar un Hechizo de batalla en defensa cuesta 1 <span class="label label-extra">Turno</span>.</div>
+                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y <span class="label label-extra">Maná</span> en conjurar un <span class="label label-extra">Hechizo</span> sobre tu Reino o un enemigo. Al igual que con los <span class="label label-artifact">Artefactos</span>, debes traspasar la <span class="label label-extra">Defensa Mágica</span> del objetivo. Colocar un Hechizo de batalla en defensa cuesta 1 <span class="label label-extra">Turno</span>.</div>
                         </div>
                     </div>
                 </div>
