--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -16,21 +16,21 @@
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 8.</li>
+                        <li>Ahora al registrarte se te concede un <span class="label label-artifact">Artefacto</span> aleatorio.</li>
                         <li>Ahora los <span class="label label-extra">Dioses</span> tienen muchísimo <span class="label label-extra">Oro</span> y <span class="label label-artifact">Runas</span> para robarles en <span class="label label-extra">Pillaje</span>.</li>
                         <li>Ahora los <span class="label label-extra">Dioses</span> exigen mayores sacrificios al usar el templo.</li>
-                        <li>Ahora los <span class="label label-extra">Encantamientos</span> otorgan poder por nivel a tu Reino.</li>
+                        <li>Ahora los <span class="label label-extra">Encantamientos</span> beneficiosos de tu Reino suman poder por nivel.</li>
                         <li>Ahora los <span class="label label-extra">Héroes</span> ya no duplican sus bonuses por nivel, sino que ganan el doble de experiencia en combate si son de tu mismo color.</li>
-                        <li>Ahora la habilidad <span class="label label-extra">Prisa</span> ya no incrementa la velocidad, sino que iguala la velocidad enemiga en combate para atacar a la vez.</li>
-                        <li>Ahora al intentar lanzar un <span class="label label-extra">Hechizo</span> en batalla, si no pasa las barreras enemigas, no consume el maná.</li>
-                        <li>Ahora el nivel máximo de <span class="label label-extra">Magia</span> es 10.</li>
+                        <li>Ahora la habilidad <span class="label label-skill">Prisa</span> ya no incrementa la velocidad, sino que iguala la velocidad enemiga en combate para atacar a la vez.</li>
+                        <li>Ahora al intentar lanzar un <span class="label label-extra">Hechizo</span> en batalla (y sólo en batalla), si no pasa las barreras enemigas, no consume el maná.</li>
+                        <li>Ahora el nivel máximo de <span class="label label-extra">Magia</span> es 10. Se consigue investigando hechizos de otros colores.</li>
                         <li>Ahora en la subasta no pueden aparecer <span class="label label-extra">Hechizos</span> de nivel 4 o 5.</li>
-                        <li>Se han reorganizado todos los <span class="label label-extra">Hechizos</span> para que los más únicos de cada color estén en los niveles superiores.</li>
-                        <li>Se han reasignado muchas <span class="label label-extra">Habilidades</span> de <span class="label label-extra">Tropas</span>.</li>
-                        <li>Se han cambiado los <span class="label label-extra">Artefactos</span> vendidos en la tienda interna del juego.</li>
+                        <li>Se han reorganizado todos los <span class="label label-extra">Hechizos</span> para que los más característicos de cada color sean de nivel 4 y 5.</li>
+                        <li>Se han reasignado muchas <span class="label label-skill">Habilidades</span> de <span class="label label-extra">Tropas</span> para equilibrar todas las facciones.</li>
                         <li>Se han modificado/añadido los siguientes <span class="label label-artifact">Artefactos</span>:
                             <ul>
                                 <li><span class="label label-artifact">Reloj de Arena</span>, aumentado de 75 a 150 los turnos restados a tus <span class="label label-extra">Encantamientos</span>.</li>
-                                <li><span class="label label-artifact">Barril de Pólvora</span>, aumentado de 3% a 6% los <span class="label label-extra">Edificios</span> enemigos destruidos.</li>
+                                <li><span class="label label-artifact">Barril de Pólvora</span>, aumentado de 3% a 5% los <span class="label label-extra">Edificios</span> enemigos destruidos.</li>
                                 <li><span class="label label-artifact">Espejo Roto</span>, rompe un <span class="label label-extra">Encantamiento</span> enemigo aleatorio.</li>
                                 <li><span class="label label-artifact">Polvo de Hadas</span>, roba <span class="label label-extra">Tropas</span> enemigas y las agrega a tu Reino.</li>
                                 <li><span class="label label-artifact">Santa Granada</span>, destruye <span class="label label-extra">Tropas</span> enemigas.</li>
@@ -43,6 +43,7 @@
                                 <li><span class="label label-legendary">Amuleto Maldito</span>, -20% a todos los <span class="label label-extra">Bonuses</span> de tu Reino.</li>
                             </ul>
                         </li>
+                        <li>Se han cambiado los <span class="label label-extra">Artefactos</span> vendidos en la tienda interna del juego.</li>
                         <li>Se han modificado los siguientes <span class="label label-extra">Héroes</span>:
                             <ul>
                                 <li><span class="label label-success">Ladrona Elfa</span>, aumentado de 1 a 2 los <span class="label label-extra">Turnos</span> eliminados por nivel.</li>
@@ -55,6 +56,13 @@
                                 <li><span class="label label-info">Tsunami</span> por <span class="label label-info">Hipnosis</span>, roba <span class="label label-extra">Tropas</span> enemigas y las agrega a tu ejército.</li>
                                 <li><span class="label label-primary">Palabra Santa</span> por <span class="label label-primary">Iluminación</span>, obtiene nuevos <span class="label label-extra">Hechizos</span> para investigar.</li>
                                 <li><span class="label label-success">Rayo de Sol</span> por <span class="label label-success">Marca del Cazador</span>, <span class="label label-extra">Encantamiento</span> para que el mago enemigo pueda ser atacado por cualquiera.</li>
+                            </ul>
+                        </li>
+                        <li>Se han ajustado los porcentajes de los tipos de ataques:
+                            <ul>
+                                <li><span class="label label-extra">Conquista</span>: Anexa un 3% de las <span class="label label-extra">Tierras</span> enemigas a tu reino.</li>
+                                <li><span class="label label-extra">Pillaje</span>: Roba un 5% del <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span> enemigos, además de una <span class="label label-artifact">Runa</span>.</li>
+                                <li><span class="label label-extra">Asedio</span>: Destruye un 7% de las <span class="label label-extra">Tierras</span>, <span class="label label-extra">Oro</span>, <span class="label label-extra">Personas</span> y <span class="label label-extra">Maná</span> enemigos.</li>
                             </ul>
                         </li>
                     </ul>
@@ -74,13 +82,13 @@
                         <li>Se han reducido muchos bonuses de <span class="label label-extra">Héroes</span>, pero ahora los <span class="label label-extra">Héroes</span> de tu mismo color duplicarán sus bonuses por nivel.</li>
                         <li>Se ha reducido el <span class="label label-extra">Bonus de Facción</span> en combate (de 100% a 50%).</li>
                         <li>Se ha reducido el <span class="label label-extra">Bonus de Unidad</span> en combate (de 100% a 50%).</li>
-                        <li>Ahora algunas tropas tienen <span class="label label-extra">Habilidades</span> especiales en combate:
+                        <li>Ahora algunas tropas tienen <span class="label label-skill">Habilidades</span> especiales en combate:
                             <ul>
-                                <li><span class="label label-extra">Regeneración</span>, resucita un 25% de sus unidades muertas tras el combate.</li>
-                                <li><span class="label label-extra">Desvanecer</span>, tiene un 25% probabilidad de evadir completamente un ataque.</li>
-                                <li><span class="label label-extra">Escamas</span>, reduce en un 25% los daños sufridos en un ataque.</li>
-                                <li><span class="label label-extra">Locura</span>, aumenta un 25% de los daños inflingidos en un ataque.</li>
-                                <li><span class="label label-extra">Prisa</span>, siempre ataca primero en un enfrentamiento.</li>
+                                <li><span class="label label-skill">Regeneración</span>, resucita un 25% de sus unidades muertas tras el combate.</li>
+                                <li><span class="label label-skill">Desvanecer</span>, tiene un 25% probabilidad de evadir completamente un ataque.</li>
+                                <li><span class="label label-skill">Escamas</span>, reduce en un 25% los daños sufridos en un ataque.</li>
+                                <li><span class="label label-skill">Locura</span>, aumenta un 25% de los daños inflingidos en un ataque.</li>
+                                <li><span class="label label-skill">Prisa</span>, siempre ataca primero en un enfrentamiento.</li>
                             </ul>
                         </li>
                         <li>Ahora hay 3 tipos de ataques, con diferentes consecuencias en caso de victoria total:
