Arreglado bug con el power de los hechizos, el Eclipse sumaba 1.000.000

--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -248,7 +248,7 @@
                             {% set quantity = 0 %}
                             {% set power = 0 %}
                             {% for research in player.researchs if research.active %}
-                                {% set power = power + research.spell.power|abs %}
+                                {% set power = power + 100000 %}
                                 {% set quantity = quantity + 1 %}
                             {% endfor %}
                             <tr>
