--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -12,6 +12,30 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
+                <div class="panel-heading text-center">Versión 1.9b</div>
+                <div class="panel-body text-responsive">
+                    <ul>
+                        <li>Comienza la Temporada 9.</li>
+                        <li>Se ha reducido el máximo de <span class="label label-extra">Defensa Mágica</span> de 75% a 50%.</li>
+                        <li>Se ha arreglado un bug por el cual <span class="label label-info">Hipnosis</span> podía robar y darte 0 tropas.</li>
+                        <li>Ahora el <span class="label label-extra">Templo</span> puede romper <span class="label label-extra">Encantamientos</span> aleatorios como tributo.</li>
+                        <li>Ahora los mapas dan como máximo 1 <span class="label label-artifact">Runa</span>, y no siempre.</li>
+                        <li>Se han ajustado los siguientes <span class="label label-extra">Hechizos</span>:
+                            <ul>
+                                <li><span class="label label-info">Encontrar Artefacto</span>, de 10% a 5% por nivel.</li>
+                                <li><span class="label label-primary">Destruir Artefacto</span>, de 10% a 5% por nivel.</li>
+                                <li><span class="label label-info">Desencantar</span>, de 10% a 5% por nivel.</li>
+                            </ul>
+                        </li>
+                        <li>No le estoy haciendo ni puto caso al <a href="https://www.wyzard.es" target="_blank" class="link">Wyzard</a> porque estoy inmerso en la creación de un nuevo juego: <a href="https://www.expansyon.com" target="_blank" class="link">Expansyon</a>.</li>
+                        <li>A callar, que es gratis! Bastante hice la temporada pasada...</li>
+                    </ul>
+                </div>
+                <div class="panel-footer text-center">Beta abierta</div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center">Versión 1.8b</div>
                 <div class="panel-body text-responsive">
                     <ul>
