Ajustados algunos artefactos

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -25,6 +25,13 @@
                                 <li><span class="label label-info">Desencantar</span>, de 10% a 5% por nivel.</li>
                             </ul>
                         </li>
+                        <li>Se han ajustado los siguientes <span class="label label-extra">Artefactos</span>:
+                            <ul>
+                                <li><span class="label label-legendary">Amuleto Maldito</span>, de 20% a 5%.</li>
+                                <li><span class="label label-artifact">Muñeca Voodoo</span>, de 50 a 25 turnos.</li>
+                                <li><span class="label label-artifact">Barril de Pólvora</span>, de 5% a 3%.</li>
+                            </ul>
+                        </li>
                         <li>No le estoy haciendo ni puto caso al <a href="https://www.wyzard.es" target="_blank" class="link">Wyzard</a> porque estoy inmerso en la creación de un nuevo juego: <a href="https://www.expansyon.com" target="_blank" class="link">Expansyon</a>.</li>
                     </ul>
                 </div>
