Season10, reducido % de Huracan, empezamos a agregar i18n.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -12,6 +12,23 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
+                <div class="panel-heading text-center">Versión 2.0</div>
+                <div class="panel-body text-responsive">
+                    <ul>
+                        <li>Comienza la Temporada 10.</li>
+                        <li>Se han ajustado los siguientes <span class="label label-extra">Hechizos</span>:
+                            <ul>
+                                <li><span class="label label-success">Huracán</span>, de 10% a 5% por nivel.</li>
+                            </ul>
+                        </li>
+                        <li>Se ha agregado un sistema de internacionalización (i18n).</li>
+                        <li>Se ha agregado el idioma Español al juego.</li>
+                        <li>Se ha agregado el idioma Inglés al juego.</li>
+                    </ul>
+                </div>
+                <div class="panel-footer text-center">Release Candidate 1</div>
+            </div>
+            <div class="panel panel-default">
                 <div class="panel-heading text-center">Versión 1.9b</div>
                 <div class="panel-body text-responsive">
                     <ul>
