--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -12,6 +12,18 @@
         </div>
         <div class="col-xs-12">
             <div class="panel panel-default">
+                <div class="panel-heading text-center">Versión 1.91b</div>
+                <div class="panel-body text-responsive">
+                    <ul>
+                        <li>Comienza la Temporada 10.</li>
+                        <li>No he hecho nada en vacaciones.</li>
+                    </ul>
+                </div>
+                <div class="panel-footer text-center">Beta abierta</div>
+            </div>
+        </div>
+        <div class="col-xs-12">
+            <div class="panel panel-default">
                 <div class="panel-heading text-center">Versión 1.9b</div>
                 <div class="panel-body text-responsive">
                     <ul>
